--- a/myplaybookvars.yml
+++ b/myplaybookvars.yml
@@ -9,3 +9,13 @@
       - name: i want to display variable value
         debug: 
            msg : "{{myvar1}}"
+
+      - name: i want to install tree ,git ,wget
+        apt:
+          name: "{{item}}"
+          state: present
+        when: ansible_os_family=="Debian"
+        loop:
+        - "{{myvar1}}"
+        - "{{myvar2}}"
+        - "{{myvar3}}"
