--- a/mydebug.yml
+++ b/mydebug.yml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
      - name: i want to execute linux command
-       command: hostnamee -f
+       command: hostname -f
        register: myresult
 
      - name: i want to display linux output 
@@ -15,10 +15,10 @@
        apt:
           name: tree 
           state: present 
-       when: myresult.stderr ==""
+       when: myresult.stderr !=""
 
      - name: i want to install wget
        apt:
           name: wget
           state: present 
-       when: myresult.stderr !=""
+       when: myresult.stderr ==""
