--- a/mytags.yml
+++ b/mytags.yml
@@ -13,6 +13,7 @@
          name : wgett
          state: present
       tags: mywget
+      ignore_errors: yes
 
     - name: i want to install git
       apt:
