--- a/myfilehandle.yml
+++ b/myfilehandle.yml
@@ -1,8 +1,5 @@
 --- 
-- hosts: 172.31.20.33 
-  become: yes
-  tasks:
-    - name: i want to create a file
-      file: 
-        path: /home/ubuntu/myfile
-        state: touch
+  - name: i want to create a file
+    file: 
+      path: /home/ubuntu/myfile1
+      state: touch
