--- a/myfile.yml
+++ b/myfile.yml
@@ -8,3 +8,8 @@
       apt:
         name: apache2
         state: present
+
+    - name: i want to copy file or alter file or create file in node
+      template:
+        src: myindex.j2
+        dest: /var/www/html/index.html
