--- a/mytomcatrole/tasks/main.yml
+++ b/mytomcatrole/tasks/main.yml
@@ -1,2 +1,8 @@
 ---
 # tasks file for mytomcatrole
+    - include_tasks : InstallJava.yml
+    - include_tasks : CreateTomcatUser.yml
+    - include_tasks : InstallTomcat.yml
+    - include_tasks : UpdatePermissions.yml
+    - include_tasks : tomcatservicefile.yml
+    - include_tasks : tomcatservicstart.yml
